--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,17 @@ next-env.d.ts
 
 .genkit/*
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# API keys and secrets
+*api-key*
+*secret*
+*token*
+*password*
+*credential*
 
 # firebase
 firebase-debug.log
